增加根节点程序，清理项目目录，移除无关文件。

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# cpp project build files
+project/cmake-build-debug/
+project/out/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
